# patent-webapp

./: .gitignore  README.md  Webapp Doc DSPP.docx  pyproject.toml
code/experiment/: BERT4Patents.ipynb  XLNet.ipynb  test.xlsx  train.xlsx  val.xlsx
code/inference/: inference.ipynb
models/xlnet/: config.json
src/: app.py  model.py  stopwords
