[tool.poetry]
name = "patent-webapp"
version = "0.1.0"
description = ""
authors = ["cacev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = "^2.3.1"
torchtext = "^0.18.0"
transformers = "^4.42.3"
sentencepiece = "^0.2.0"
pandas = "^2.2.2"
streamlit = "^1.36.0"
matplotlib = "^3.9.1"
wordcloud = "^1.9.3"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
